--- a/practice frontend/home.html
+++ b/practice frontend/home.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container-1">
       <div class="banner">
-        <input class="search" type="search" name="search" />
+        <input class="search" type="search" name="search" placeholder="search" label="search"/>
         <button class="task">Assinged to me.</button>
         <button class="task">task</button>
       </div>
